user account panel refactor + test